# CppAIService

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
AIApps/ChatServer/resource/: entry.html
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh  init.sql
tests/: CMakeLists.txt
tests/integration/: test_api_login.cpp
tests/unit/: test_router.cpp
